<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appbsru.supergolf.healthrecord.Section12Activity"
    android:background="@drawable/bg500">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section1_2"
        android:id="@+id/textView17"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primary_material_dark"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView17"
        android:layout_above="@+id/button2"
        android:background="#96ffffff"
        android:padding="20dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/age1"
                android:id="@+id/textAge"
                android:layout_weight="1"
                android:textSize="@dimen/h3"
                android:textColor="@color/primary_material_dark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:layout_weight="1"
                android:hint="@string/year" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:id="@+id/textView19"
                android:layout_weight="1"
                android:textSize="@dimen/h3"
                android:textColor="@color/primary_material_dark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText5"
                android:layout_weight="1"
                android:hint="@string/kilo" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:id="@+id/textView20"
                android:layout_weight="1"
                android:textSize="@dimen/h3"
                android:textColor="@color/primary_material_dark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText6"
                android:layout_weight="1"
                android:hint="@string/meter" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presser"
            android:id="@+id/textView21"
            android:textSize="@dimen/h3"
            android:textColor="@color/primary_material_dark" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ragPressure2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nohave"
                android:id="@+id/radioButton7"
                android:checked="true"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have"
                android:id="@+id/radioButton8"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickSection12"
        android:text="@string/section1"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/h2" />
</RelativeLayout>
