<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appbsru.supergolf.healthrecord.Section1Activity"
    android:background="@drawable/bg500">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section1_1"
        android:id="@+id/textView5"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/primary_material_dark"
        android:layout_marginTop="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView5"
        android:layout_above="@+id/button"
        android:layout_margin="15dp"
        android:background="#96ffffff"
        android:padding="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/textView9"
                android:textSize="@dimen/h3"
                android:textColor="@color/primary_material_dark" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:id="@+id/textView10"
                android:textSize="@dimen/h3"
                android:textColor="@color/primary_material_dark" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ragSex"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/radioButton"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/radioButton2"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:id="@+id/textView11"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/primary_material_dark" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:layout_weight="1"
                    android:hint="@string/meter"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:id="@+id/textView12"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/primary_material_dark" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:layout_weight="1"
                    android:hint="@string/kilo"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/width"
                    android:id="@+id/textView13"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/primary_material_dark" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:layout_weight="1"
                    android:hint="@string/centi"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presser"
                android:id="@+id/textView14"
                android:textSize="@dimen/h3"
                android:textColor="@color/primary_material_dark" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ragPressure"
                android:orientation="horizontal" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nohave"
                    android:id="@+id/radioButton3"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have"
                    android:id="@+id/radioButton4"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DM"
                android:id="@+id/textView15"
                android:textSize="@dimen/h3"
                android:textColor="@color/primary_material_dark" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ragDiabetes"
                android:orientation="horizontal" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nohave"
                    android:id="@+id/radioButton5"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have"
                    android:id="@+id/radioButton6"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickSection11"
        android:text="@string/section1"
        android:id="@+id/button"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
