<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appbsru.supergolf.healthrecord.MainHoldSection1"
    android:background="@drawable/bg500">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section1"
        android:id="@+id/textView6"
        android:textSize="@dimen/h1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primary_material_dark" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon"
            android:id="@+id/imageView5"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon33" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section1_1"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h3"
            android:textColor="@color/primary_material_dark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon"
            android:id="@+id/imageView6"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon44"
            android:layout_marginTop="20dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section1_2"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h3"
            android:textColor="@color/primary_material_dark" />
    </LinearLayout>
</RelativeLayout>
